restore recipe rankings
